--- a/ei.http.conf
+++ b/ei.http.conf
@@ -19,4 +19,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
+    error_log  /var/log/nginx/ui-error.log ;
+    access_log  /var/log/nginx/ui-access.log;
 }
