--- a/ei.https.conf
+++ b/ei.https.conf
@@ -23,4 +23,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
     }
+    error_log  /var/log/nginx/ui-error.log ;
+    access_log  /var/log/nginx/ui-access.log;
 }
