--- a/ui.ei.https.conf
+++ b/ui.ei.https.conf
@@ -1,6 +1,7 @@
 server {
     listen 443;
     server_name dev-ui-ei.demo.com;
+    ssl_password_file /etc/nginx/ssl/global.pass;
     ssl on;
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
