--- a/ei.https.conf
+++ b/ei.https.conf
@@ -7,6 +7,7 @@ upstream ssl.wso2.ei.com {
 server {
     listen 443;
     server_name dev-ei.demo.com;
+    ssl_password_file /etc/nginx/ssl/global.pass;
     ssl on;
     ssl_certificate /etc/nginx/ssl/server.crt;
     ssl_certificate_key /etc/nginx/ssl/server.key;
